src/fr/esilv/simpleparql/grammar/SimplePARQLParser.java
// Generated from C:/Users/Abdel/Desktop/Stage_A4/SimplePARQL/SimplePARQL/src/fr/esilv/simpleparql/grammar\SimplePARQL.g4 by ANTLR 4.7
package fr.esilv.simpleparql.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimplePARQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, Select=28, Prefix=29, Where=30, Distinct=31, 
		Filter=32, Str=33, Lang=34, Langmatches=35, Datatype=36, Contains=37, 
		Ucase=38, Lcase=39, Bound=40, Sameterm=41, Isiri=42, Isuri=43, Isblank=44, 
		Isliteral=45, Year=46, Month=47, Day=48, Hours=49, Minutes=50, Seconds=51, 
		Timezone=52, Tz=53, Regex=54, Bind=55, Optional=56, Union=57, Asc=58, 
		Desc=59, Limit=60, Offset=61, Order=62, By=63, INTEGER=64, DECIMAL=65, 
		DOUBLE=66, INTEGER_POSITIVE=67, DECIMAL_POSITIVE=68, DOUBLE_POSITIVE=69, 
		INTEGER_NEGATIVE=70, DECIMAL_NEGATIVE=71, DOUBLE_NEGATIVE=72, EXPONENT=73, 
		DIGIT=74, URI=75, VAR=76, NIL=77, TRUC_WORD=78, VARNAME=79, PNAME_LN=80, 
		PN_LOCAL=81, STRING_LITERAL1=82, STRING_LITERAL2=83, TRUC_SLASH=84, ECHAR=85, 
		ANON=86, LANGTAG=87, BLANK_NODE_LABEL=88, PNAME_NS=89, PN_PREFIX=90, PN_CHARS_UNDERSCORE=91, 
		HTTP=92, WS=93;
	public static final int
		RULE_query = 0, RULE_prologue = 1, RULE_prefixDecl = 2, RULE_selectQuery = 3, 
		RULE_whereClause = 4, RULE_groupGraphPattern = 5, RULE_filter = 6, RULE_constraint = 7, 
		RULE_functionCall = 8, RULE_brackettedExpression = 9, RULE_expression = 10, 
		RULE_conditionalOrExpression = 11, RULE_conditionalAndExpression = 12, 
		RULE_valueLogical = 13, RULE_numericExpression = 14, RULE_additiveExpression = 15, 
		RULE_multiplicativeExpression = 16, RULE_unaryExpression = 17, RULE_primaryExpression = 18, 
		RULE_builtInCall = 19, RULE_regexExpression = 20, RULE_iriRefOrFunction = 21, 
		RULE_argList = 22, RULE_iriRef = 23, RULE_prefixedName = 24, RULE_triplesBlock = 25, 
		RULE_triplesSameSubject = 26, RULE_graphPatternNotTriples = 27, RULE_bind = 28, 
		RULE_optionalGraphPattern = 29, RULE_triplesNode = 30, RULE_collection = 31, 
		RULE_blankNodePropertyList = 32, RULE_propertyListNotEmpty = 33, RULE_objectList = 34, 
		RULE_object = 35, RULE_verb = 36, RULE_varOrIRIreforTruc = 37, RULE_graphNode = 38, 
		RULE_varOrTerm = 39, RULE_graphTerm = 40, RULE_rdfLiteral = 41, RULE_booleanLiteral = 42, 
		RULE_blankNode = 43, RULE_string = 44, RULE_groupOrUnionGraphPattern = 45, 
		RULE_truc = 46, RULE_solutionModifier = 47, RULE_limitOffsetClauses = 48, 
		RULE_orderClause = 49, RULE_orderCondition = 50, RULE_limitClause = 51, 
		RULE_offsetClause = 52, RULE_numericLiteral = 53, RULE_numericLiteralUnsigned = 54, 
		RULE_numericLiteralPositive = 55, RULE_numericLiteralNegative = 56;
	public static final String[] ruleNames = {
		"query", "prologue", "prefixDecl", "selectQuery", "whereClause", "groupGraphPattern", 
		"filter", "constraint", "functionCall", "brackettedExpression", "expression", 
		"conditionalOrExpression", "conditionalAndExpression", "valueLogical", 
		"numericExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primaryExpression", "builtInCall", "regexExpression", 
		"iriRefOrFunction", "argList", "iriRef", "prefixedName", "triplesBlock", 
		"triplesSameSubject", "graphPatternNotTriples", "bind", "optionalGraphPattern", 
		"triplesNode", "collection", "blankNodePropertyList", "propertyListNotEmpty", 
		"objectList", "object", "verb", "varOrIRIreforTruc", "graphNode", "varOrTerm", 
		"graphTerm", "rdfLiteral", "booleanLiteral", "blankNode", "string", "groupOrUnionGraphPattern", 
		"truc", "solutionModifier", "limitOffsetClauses", "orderClause", "orderCondition", 
		"limitClause", "offsetClause", "numericLiteral", "numericLiteralUnsigned", 
		"numericLiteralPositive", "numericLiteralNegative"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'*'", "'{'", "'.'", "'}'", "'('", "')'", "'||'", "'&&'", "'='", 
		"'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'/'", "'!'", "','", 
		"'AS'", "'['", "']'", "';'", "'a'", "'^^'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "Select", "Prefix", "Where", "Distinct", "Filter", 
		"Str", "Lang", "Langmatches", "Datatype", "Contains", "Ucase", "Lcase", 
		"Bound", "Sameterm", "Isiri", "Isuri", "Isblank", "Isliteral", "Year", 
		"Month", "Day", "Hours", "Minutes", "Seconds", "Timezone", "Tz", "Regex", 
		"Bind", "Optional", "Union", "Asc", "Desc", "Limit", "Offset", "Order", 
		"By", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", 
		"DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", 
		"EXPONENT", "DIGIT", "URI", "VAR", "NIL", "TRUC_WORD", "VARNAME", "PNAME_LN", 
		"PN_LOCAL", "STRING_LITERAL1", "STRING_LITERAL2", "TRUC_SLASH", "ECHAR", 
		"ANON", "LANGTAG", "BLANK_NODE_LABEL", "PNAME_NS", "PN_PREFIX", "PN_CHARS_UNDERSCORE", 
		"HTTP", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimplePARQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimplePARQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public PrologueContext prologue() {
			return getRuleContext(PrologueContext.class,0);
		}
		public SelectQueryContext selectQuery() {
			return getRuleContext(SelectQueryContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public SolutionModifierContext solutionModifier() {
			return getRuleContext(SolutionModifierContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimplePARQLParser.EOF, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			prologue();
			setState(115);
			selectQuery();
			setState(116);
			whereClause();
			setState(117);
			solutionModifier();
			setState(118);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologueContext extends ParserRuleContext {
		public List<PrefixDeclContext> prefixDecl() {
			return getRuleContexts(PrefixDeclContext.class);
		}
		public PrefixDeclContext prefixDecl(int i) {
			return getRuleContext(PrefixDeclContext.class,i);
		}
		public PrologueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prologue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterPrologue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitPrologue(this);
		}
	}

	public final PrologueContext prologue() throws RecognitionException {
		PrologueContext _localctx = new PrologueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prologue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Prefix) {
				{
				{
				setState(120);
				prefixDecl();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixDeclContext extends ParserRuleContext {
		public TerminalNode Prefix() { return getToken(SimplePARQLParser.Prefix, 0); }
		public TerminalNode PNAME_NS() { return getToken(SimplePARQLParser.PNAME_NS, 0); }
		public TerminalNode URI() { return getToken(SimplePARQLParser.URI, 0); }
		public PrefixDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterPrefixDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitPrefixDecl(this);
		}
	}

	public final PrefixDeclContext prefixDecl() throws RecognitionException {
		PrefixDeclContext _localctx = new PrefixDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prefixDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(Prefix);
			setState(127);
			match(PNAME_NS);
			setState(128);
			match(URI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryContext extends ParserRuleContext {
		public TerminalNode Select() { return getToken(SimplePARQLParser.Select, 0); }
		public TrucContext truc() {
			return getRuleContext(TrucContext.class,0);
		}
		public TerminalNode Distinct() { return getToken(SimplePARQLParser.Distinct, 0); }
		public List<TerminalNode> VAR() { return getTokens(SimplePARQLParser.VAR); }
		public TerminalNode VAR(int i) {
			return getToken(SimplePARQLParser.VAR, i);
		}
		public SelectQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterSelectQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitSelectQuery(this);
		}
	}

	public final SelectQueryContext selectQuery() throws RecognitionException {
		SelectQueryContext _localctx = new SelectQueryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(Select);
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Distinct) {
				{
				setState(131);
				match(Distinct);
				}
			}

			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				{
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(134);
					match(VAR);
					}
					}
					setState(137); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VAR );
				}
				break;
			case T__0:
				{
				setState(139);
				match(T__0);
				}
				break;
			case TRUC_WORD:
			case STRING_LITERAL1:
			case STRING_LITERAL2:
			case TRUC_SLASH:
				{
				setState(140);
				truc();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereClauseContext extends ParserRuleContext {
		public TerminalNode Where() { return getToken(SimplePARQLParser.Where, 0); }
		public GroupGraphPatternContext groupGraphPattern() {
			return getRuleContext(GroupGraphPatternContext.class,0);
		}
		public WhereClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereClause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterWhereClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitWhereClause(this);
		}
	}

	public final WhereClauseContext whereClause() throws RecognitionException {
		WhereClauseContext _localctx = new WhereClauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whereClause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(Where);
			setState(144);
			groupGraphPattern();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupGraphPatternContext extends ParserRuleContext {
		public List<TriplesBlockContext> triplesBlock() {
			return getRuleContexts(TriplesBlockContext.class);
		}
		public TriplesBlockContext triplesBlock(int i) {
			return getRuleContext(TriplesBlockContext.class,i);
		}
		public List<GraphPatternNotTriplesContext> graphPatternNotTriples() {
			return getRuleContexts(GraphPatternNotTriplesContext.class);
		}
		public GraphPatternNotTriplesContext graphPatternNotTriples(int i) {
			return getRuleContext(GraphPatternNotTriplesContext.class,i);
		}
		public GroupGraphPatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupGraphPattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).enterGroupGraphPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimplePARQLListener ) ((SimplePARQLListener)listener).exitGroupGraphPattern(this);
		}
	}

	public final GroupGraphPatternContext groupGraphPattern() throws RecognitionException {
		GroupGraphPatternContext _localctx = new GroupGraphPatternContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_groupGraphPattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(T__1);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__20) | (1L << T__25) | (1L << T__26))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INTEGER - 64)) | (1L << (DECIMAL - 64)) | (1L << (DOUBLE - 64)) | (1L << (INTEGER_POSITIVE - 64)) | (1L << (DECIMAL_POSITIVE - 64)) | (1L << (DOUBLE_POSITIVE - 64)) | (1L << (INTEGER_NEGATIVE - 64)) | (1L << (DECIMAL_NEGATIVE - 64)) | (1L << (DOUBLE_NEGATIVE - 64)) | (1L << (URI - 64)) | (1L << (VAR - 64)) | (1L << (NIL - 64)) | (1L << (TRUC_WORD - 64)) | (1L << (PNAME_LN - 64)) | (1L << (STRING_LITERAL1 - 64)) | (1L << (STRING_LITERAL2 - 64)) | (1L << (TRUC_SLASH - 64)) | (1L << (ANON - 64)) | (1L << (BLANK_NODE_LABEL - 64)) | (1L << (PNAME_NS - 64)))) != 0)) {
				{
				setState(147);
				triplesBlock();
				}
			}

			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << Filter) | (1L << Bind) | (1L << Optional))) != 0)) {
				{
				{
				{
				setState(150);
				graphPatternNotTriples();
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(151);
					match(T__2);
					}
				}

				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__20) | (1L << T__25) | (1L << T__26))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (INTEGER - 64)) | (1L << (DECIMAL - 64)) | (1L << (DOUBLE - 64)) | (1L << (INTEGER_POSITIVE - 64)) | (1L << (DECIMAL_POSITIVE - 64)) | (1L << (DOUBLE_POSITIVE - 64)) | (1L << (INTEGER_NEGATIVE - 64)) | (1L << (DECIMAL_NEGATIVE - 64)) | (1L << (DOUBLE_NEGATIVE - 64)) | (1L << (URI - 64)) | (1L << (VAR - 64)) | (1L << (NIL - 64)) | (1L << (TRUC_WORD - 64)) | (1L << (PNAME_LN - 64)) | (1L << (STRING_LITERAL1 - 64)) | (1L << (STRING_LITERAL2 - 64)) | (1L << (TRUC_SLASH - 64)) | (1L << (ANON - 64)) | (1L << (BLANK_NODE_LABEL - 64)) | (1L << (PNAME_NS - 64)))) != 0)) {
					{
					setState(154);
					triplesBlock();
					}
				}

				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(162);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
